--- a/BumpInTheNightLibrary.Tests/BumpInTheNightLibrary.Tests.csproj
+++ b/BumpInTheNightLibrary.Tests/BumpInTheNightLibrary.Tests.csproj
@@ -53,7 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoardTests\placement.cs" />
+    <Compile Include="AssertExtensions.cs" />
+    <Compile Include="CommandTests\add_wall.cs" />
+    <Compile Include="CommandTests\placement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Should.cs" />
   </ItemGroup>
